made link to second page

--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
         <li>spanish</li>
         <li>study skills</li>
     </ul>
+  <a href="sports.html"  >my sports page</a>
     </body>
 </html>
