--- a/sports.html
+++ b/sports.html
@@ -11,7 +11,8 @@
         <p> Ive played golf for over 5 years now and I have always loved it. It is definitly my favorite sport.</p>
         <li>Basketball</li>
         <p> I have played basketball for my whole life pretty much and it is a awesome sport. I love to shot threes. </p>
-        <p><a href="https:https://github.com/SAAS-ComputationalThinking/portfolio-Rylan-galante">Visit github!</a></p>
-    </ul>
+       galante">Visit github!</a></p>
+       <p><a href="index.html">Visit github!</a></p>
+
     </body>
 </html>
